[package]
name = "worldbank-climate-api-client"
version = "0.1.0"
authors = ["Denis Karpovskiy <geext29@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
servirtium = { path = "../servirtium" }
quick-xml = {version = "^0.18", features = ["serialize"]}
reqwest = { version = "^0.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
