[package]
name = "servirtium-codegen"
version = "0.1.0"
authors = ["Denis Karpovskiy <geext29@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

[lib]
proc-macro = true
