[package]
name = "servirtium"
version = "0.1.0"
authors = ["Denis Karpovskiy <geext29@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
servirtium-codegen = { path = "../servirtium-codegen" }
regex = "1"
lazy_static = "1.4.0"
hyper = { version = "0.14.20", features = ["full"] }
futures = "0.3.5"
tokio = { version = "1.21.1", features = ["full"] }
async-trait = "0.1"
hyper-tls = "0.5.0"
